[tool.poetry]
name = "girandole"
version = "1.0.0"
description = "REST API on top of the Beets media organizer."
authors = ["Bart Kleijngeld <bartkl@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.2"
beets = "^1.4.9"
pylast = "^4.0.0"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
